--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HouseHold>
+﻿@model IEnumerable<Household>
 
 @{
     ViewData["Title"] = "Index";
@@ -23,19 +23,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.HouseHoldNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstQtrVisit)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SecondQtrVisit)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ThirdQtrVisit)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FourthQtrVisit)
+                @Html.DisplayNameFor(model => model.HouseholdNo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
@@ -61,88 +49,45 @@
             <th>
                 @Html.DisplayNameFor(model => model.ContactNo)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsNHTS)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsHeadPhilhealthMember)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhilhealthNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsIP)
-            </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.HouseHoldNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstQtrVisit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SecondQtrVisit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThirdQtrVisit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FourthQtrVisit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MotherMaidenName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HouseNoAndStreet)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Barangay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Province)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsNHTS)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsHeadPhilhealthMember)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhilhealthNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsIP)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseholdNo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MotherMaidenName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseNoAndStreet)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Barangay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Province)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ContactNo)
+                </td>
+                <td>
+                    <a class="btn btn-primary" asp-action="HouseholdProfile" asp-route-householdNo="@item.HouseholdNo">View Household</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
