--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AUF.EMR.Domain.Models.HouseHoldMember
+﻿@model AUF.EMR.Domain.Models.HouseholdMember
 
 @{
     ViewData["Title"] = "Create";
@@ -73,9 +73,9 @@
                 <span asp-validation-for="Remarks" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HouseHoldNo" class="control-label"></label>
-                <input asp-for="HouseHoldNo" class="form-control" />
-                <span asp-validation-for="HouseHoldNo" class="text-danger"></span>
+                <label asp-for="HouseholdNo" class="control-label"></label>
+                <input asp-for="HouseholdNo" class="form-control" />
+                <span asp-validation-for="HouseholdNo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
