--- a/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AUF.EMR.Domain.Models.HouseHoldMember
+﻿@model AUF.EMR.Domain.Models.HouseholdMember
 
 @{
     ViewData["Title"] = "Edit";
@@ -73,9 +73,9 @@
                 <span asp-validation-for="Remarks" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HouseHoldNo" class="control-label"></label>
-                <input asp-for="HouseHoldNo" class="form-control" />
-                <span asp-validation-for="HouseHoldNo" class="text-danger"></span>
+                <label asp-for="HouseholdNo" class="control-label"></label>
+                <input asp-for="HouseholdNo" class="form-control" />
+                <span asp-validation-for="HouseholdNo" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
