--- a/AUF.EMR.MVC/Views/Shared/_Layout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="HouseHold" asp-action="Index">Household Profile</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
