Fix creation of masterlist forms

--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>F1 - Household Profile</h1>
-
+<a asp-action="Index" asp-controller="MasterListChildren" asp-route-householdNo="1234">MasterList</a>
 <table class="table">
     <thead>
         <tr>
