Fix route after creating children masterlist

--- a/AUF.EMR.MVC/Views/MasterListChildren/Index.cshtml
+++ b/AUF.EMR.MVC/Views/MasterListChildren/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<AUF.EMR.Domain.Models.MasterListChildren>
+﻿@model IEnumerable<AUF.EMR.Domain.Models.MasterlistChildren>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Masterlist </h1>
 
 <p>
     <a asp-action="Create" asp-route-householdNo="1235">Create New</a>
