--- a/AUF.EMR.MVC/Views/MasterListChildren/Create.cshtml
+++ b/AUF.EMR.MVC/Views/MasterListChildren/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateMasterListVM
+﻿@model CreateMasterlistChildrenVM
 
 @{
     ViewData["Title"] = "Create";
@@ -13,30 +13,32 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="MasterListChildren.NameOfMother" class="control-label"></label>
-                <input asp-for="MasterListChildren.NameOfMother" class="form-control" />
-                <span asp-validation-for="MasterListChildren.NameOfMother" class="text-danger"></span>
+                <label asp-for="MasterlistChildren.NameOfMother" class="control-label"></label>
+                <input asp-for="MasterlistChildren.NameOfMother" class="form-control" />
+                <span asp-validation-for="MasterlistChildren.NameOfMother" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MasterListChildren.NameOfFather" class="control-label"></label>
-                <input asp-for="MasterListChildren.NameOfFather" class="form-control" />
-                <span asp-validation-for="MasterListChildren.NameOfFather" class="text-danger"></span>
+                <label asp-for="MasterlistChildren.NameOfFather" class="control-label"></label>
+                <input asp-for="MasterlistChildren.NameOfFather" class="form-control" />
+                <span asp-validation-for="MasterlistChildren.NameOfFather" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="MasterListChildren.IsNhts" /> @Html.DisplayNameFor(model => model.MasterListChildren.IsNhts)
+                    <input class="form-check-input" asp-for="MasterlistChildren.IsNhts" /> @Html.DisplayNameFor(model => model.MasterlistChildren.IsNhts)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="MasterListChildren.IsInSchool" /> @Html.DisplayNameFor(model => model.MasterListChildren.IsInSchool)
+                    <input class="form-check-input" asp-for="MasterlistChildren.IsInSchool" /> @Html.DisplayNameFor(model => model.MasterlistChildren.IsInSchool)
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="MasterListChildren.HouseholdMemberId" class="control-label"></label>
-                <select asp-for="MasterListChildren.HouseholdMemberId" class="form-control" 
-                    asp-items="@(new SelectList(Model.HouseholdMembers, nameof(Model.HouseholdMember.Id), nameof(Model.HouseholdMember.LastName)))"></select>
+                <label asp-for="MasterlistChildren.HouseholdMemberId" class="control-label"></label>
+                <select asp-for="MasterlistChildren.HouseholdMemberId" class="form-control" 
+                    asp-items="@(new SelectList(Model.HouseholdMembers, nameof(Model.HouseholdMember.Id),
+                    nameof(Model.HouseholdMember.LastName)))"></select>
             </div>
+            <input type="hidden" asp-for="HouseholdNo" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
