--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -6,7 +6,7 @@
 
 <h1>F1 - Household Profile</h1>
 <a asp-action="Newborn" asp-controller="Masterlist" 
-    asp-route-householdNo="@Model.HouseholdNo">MasterList</a>
+    asp-route-householdNo="@Model.HouseholdNo">MasterList of Newborns</a>
 <table class="table">
     <thead>
         <tr>
