--- a/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
@@ -1,137 +1,83 @@
 ﻿@model IEnumerable<AUF.EMR.Domain.Models.HouseholdMember>
 
 @{
-    ViewData["Title"] = "Newborn";
+    ViewData["Title"] = "Masterlist of Newborns";
 }
 
-<h1>Newborn</h1>
+<h1>List of Newborns</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                HH. NO/ Family Serial No.
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                Name of Child
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MotherMaidenName)
+                Name of Mother
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RelationshipToHouseholdHead)
+                Address
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Sex)
+                Sex
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
+                Age
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Birthday)
+                Birthday
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstQtrClassification)
+                NHTS
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SecondQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ThirdQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FourthQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Remarks)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HouseholdNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NameOfMother)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NameOfFather)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsNhts)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsInSchool)
+                In School
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MotherMaidenName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RelationshipToHouseholdHead)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sex)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Birthday)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SecondQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThirdQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FourthQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Remarks)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HouseholdNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Household.Barangay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameOfMother)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameOfFather)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsNhts)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsInSchool)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseholdNo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                    @Html.DisplayFor(modelItem => item.MotherMaidenName)
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Household.HouseNoAndStreet)
+                    @Html.DisplayFor(modelItem => item.Household.Barangay)
+                    @Html.DisplayFor(modelItem => item.Household.City)
+                    @Html.DisplayFor(modelItem => item.Household.Province)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sex)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Birthday)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsNhts)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsInSchool)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
