--- a/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
@@ -82,7 +82,7 @@
 </div>
 
 <div>
-    <a asp-action="Edit" asp-controller="Household" asp-route-id="@Model.Household.Id">Back to List</a>
+    <a asp-action="Edit" asp-controller="Household" asp-route-id="@Model.HouseholdId">Back to List</a>
 </div>
 
 @section Scripts {
