--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -81,7 +81,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-controller="Household" asp-route-id="@Model.HouseholdId">Back to List</a>
 </div>
 
 @section Scripts {
