--- a/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AUF.EMR.Domain.Models.HouseholdMember>
 
 @{
-    ViewData["Title"] = "Masterlist of Under-five Children";
+    ViewData["Title"] = "Masterlist of School-aged Children";
 }
 
-<h1>Listt Under-five Children</h1>
+<h1>List of School-aged Children</h1>
 
 <table class="table">
     <thead>
