--- a/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AUF.EMR.Domain.Models.HouseholdMember>
 
 @{
-    ViewData["Title"] = "Masterlist of Under-five Children";
+    ViewData["Title"] = "Masterlist of Senior Citizens";
 }
 
-<h1>Listt Under-five Children</h1>
+<h1>List of Senior Citizens</h1>
 
 <table class="table">
     <thead>
@@ -13,13 +13,7 @@
                 HH. NO/ Family Serial No.
             </th>
             <th>
-                Name of Child
-            </th>
-            <th>
-                Name of Mother
-            </th>
-            <th>
-                Name of Father
+                Name
             </th>
             <th>
                 Address
@@ -31,13 +25,10 @@
                 Age
             </th>
             <th>
-                Birthday
+                Date of Birth
             </th>
             <th>
                 NHTS
-            </th>
-            <th>
-                In School
             </th>
             <th></th>
         </tr>
@@ -53,12 +44,6 @@
                     @Html.DisplayFor(modelItem => item.FirstName)
                     @Html.DisplayFor(modelItem => item.MotherMaidenName)
                     @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameOfMother)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameOfFather)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Household.HouseNoAndStreet)
@@ -77,9 +62,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.IsNhts)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsInSchool)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
