--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -14,6 +14,15 @@
 <a asp-action="Adolescent" asp-controller="Masterlist" asp-route-householdNo="@Model.HouseholdNo">MasterList of Adolescents</a>
 <a asp-action="Adult" asp-controller="Masterlist" asp-route-householdNo="@Model.HouseholdNo">MasterList of Adults</a>
 <a asp-action="SeniorCitizen" asp-controller="Masterlist" asp-route-householdNo="@Model.HouseholdNo">MasterList of Senior Citizens</a>
+<br />
+<a asp-action="Infant" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Infant Oral Health Client</a>
+<a asp-action="OneToFour" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">1-4 Oral Health Client</a>
+<a asp-action="FiveToNine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">5-9 Oral Health Client</a>
+<a asp-action="TenToFourteen" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">10-14 Oral Health Client</a>
+<a asp-action="FifteenToNineteen" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">15-19 Oral Health Client</a>
+<a asp-action="TwentyToFourtynine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">20-49 Oral Health Client</a>
+<a asp-action="PregnantFifteenToNineteen" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Pregnant 15-19 Oral Health Client</a>
+<a asp-action="PregnantTwentyToFourtynine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Pregnant 20-49 Oral Health Client</a>
 
 <table class="table">
     <thead>
