--- a/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="RelationshipToHouseholdHead" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="OtherRelation" class="control-label"></label>
+                <input asp-for="OtherRelation" class="form-control" />
+                <span asp-validation-for="OtherRelation" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Sex" class="control-label"></label>
                 <input asp-for="Sex" class="form-control" />
                 <span asp-validation-for="Sex" class="text-danger"></span>
