Add edit WRAs forms

--- a/AUF.EMR.MVC/Views/_ViewImports.cshtml
+++ b/AUF.EMR.MVC/Views/_ViewImports.cshtml
@@ -2,4 +2,7 @@
 @using AUF.EMR.MVC.Models
 @using AUF.EMR.Domain.Models.Identity;
 @using AUF.EMR.Domain.Models;
+@using AUF.EMR.MVC.Models.CreateVM;
+@using AUF.EMR.MVC.Models.EditVM;
+@using AUF.EMR.MVC.Models.IndexVM;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
