--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -23,6 +23,8 @@
 <a asp-action="TwentyToFourtynine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">20-49 Oral Health Client</a>
 <a asp-action="PregnantFifteenToNineteen" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Pregnant 15-19 Oral Health Client</a>
 <a asp-action="PregnantTwentyToFourtynine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Pregnant 20-49 Oral Health Client</a>
+<br />
+<a asp-action="Index" asp-controller="WRA" asp-route-householdNo="@Model.HouseholdNo">List of Women of Reproductive Age</a>
 
 <table class="table">
     <thead>
