Add repo, service and ui forms for pregnancy tracking

--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -25,6 +25,8 @@
 <a asp-action="PregnantTwentyToFourtynine" asp-controller="OralHealthClient" asp-route-householdNo="@Model.HouseholdNo">Pregnant 20-49 Oral Health Client</a>
 <br />
 <a asp-action="Index" asp-controller="WRA" asp-route-householdNo="@Model.HouseholdNo">List of Women of Reproductive Age</a>
+<br />
+<a asp-action="Index" asp-controller="PregnancyTracking" asp-route-householdNo="@Model.HouseholdNo">List of National Safe Motherhood Program</a>
 
 <table class="table">
     <thead>
