--- a/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Masterlist of Under-five Children";
 }
 
-<h1>Listt Under-five Children</h1>
+<h1>List Under-five Children</h1>
 
 <table class="table">
     <thead>
