--- a/AUF.EMR.MVC/Views/WRA/Create.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="WRA.HouseholdMemberId" class="control-label"></label>
-                <select asp-for="WRA.HouseholdMemberId" class="form-control" asp-items="@(new SelectList(Model.HouseholdMembers, nameof(HouseholdMember.Id), nameof(HouseholdMember.FullName)))"></select>
+                <select asp-for="WRA.HouseholdMemberId" class="form-control" asp-items="@(new SelectList(Model.WomenInHousehold, nameof(HouseholdMember.Id), nameof(HouseholdMember.FullName)))"></select>
             </div>
             <div class="form-group">
                 <input type="hidden" asp-for="WRA.HouseholdNo" value="@Model.HouseholdNo" />
