--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Women of Reproductive Age and Adolescent Women for Family Planning Services</h1>
 
 <p>
     <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo">Create New</a>
