--- a/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
@@ -82,7 +82,7 @@
                     @Html.DisplayFor(modelItem => item.IsInSchool)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Edit" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Context.Request.Path@Context.Request.QueryString">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
