--- a/AUF.EMR.MVC/Views/WRA/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Edit.cshtml
@@ -85,6 +85,7 @@
                 <span asp-validation-for="WRA.FPAcceptedDate" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="WRA.Id" />
+            <input type="hidden" asp-for="WRA.DateCreated" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
