--- a/AUF.EMR.MVC/Views/PregnancyTracking/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Edit.cshtml
@@ -93,6 +93,7 @@
                 <span asp-validation-for="PregnancyTracking.EarlyNewbornDeath" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="PregnancyTracking.Id" />
+            <input type="hidden" asp-for="PregnancyTracking.DateCreated" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
