Add routing to edit oral health clients

--- a/AUF.EMR.MVC/Views/Masterlist/Infant.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Infant.cshtml
@@ -1,4 +1,4 @@
-﻿@model MasterlistListVM
+﻿@model HouseholdMemberListVM
 
 @{
     ViewData["Title"] = "Masterlist of Infants";
@@ -50,9 +50,7 @@
                     @Html.DisplayFor(modelItem => item.HouseholdNo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                    @Html.DisplayFor(modelItem => item.MotherMaidenName)
-                    @Html.DisplayFor(modelItem => item.LastName)
+                    @Html.DisplayFor(modelItem => item.FullName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.NameOfMother)
@@ -61,10 +59,7 @@
                     @Html.DisplayFor(modelItem => item.NameOfFather)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Household.HouseNoAndStreet)
-                    @Html.DisplayFor(modelItem => item.Household.Barangay)
-                    @Html.DisplayFor(modelItem => item.Household.City)
-                    @Html.DisplayFor(modelItem => item.Household.Province)
+                    @Html.DisplayFor(modelItem => item.Household.FullAddress)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Sex)
