--- a/AUF.EMR.MVC/Views/OralHealthClient/PregnantFifteenToNineteen.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/PregnantFifteenToNineteen.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<AUF.EMR.Domain.Models.HouseholdMember>
+﻿@model HouseholdMemberListVM
 
 @{
-    ViewData["Title"] = "PregnantFifteenToNineteen";
+    ViewData["Title"] = "Masterlist of Oral Health Care Clients - Pregnant 15 to 19 years old";
 }
 
-<h1>PregnantFifteenToNineteen</h1>
+<h1>Masterlist of Oral Health Care Clients - Pregnant 15 to 19 years old</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,137 +13,60 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                Family Serial No.
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MotherMaidenName)
+                Address
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RelationshipToHouseholdHead)
+                Sex
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OtherRelation)
+                Age
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Sex)
+                Date of Birth
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Birthday)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SecondQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ThirdQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FourthQtrClassification)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Remarks)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HouseholdNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NameOfMother)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NameOfFather)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsNhts)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsInSchool)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
+                SE Status
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MotherMaidenName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RelationshipToHouseholdHead)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OtherRelation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sex)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Birthday)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SecondQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThirdQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FourthQtrClassification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Remarks)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HouseholdNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Household.Barangay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameOfMother)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameOfFather)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsNhts)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsInSchool)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.HouseholdMembers)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseholdNo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Household.FullAddress)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sex)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Birthday)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsNhts)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Model.RequestUrl">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
