--- a/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
@@ -6,6 +6,8 @@
 
 <h1>List of Newborns</h1>
 
+@Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
+
 <table class="table">
     <thead>
         <tr>
