--- a/AUF.EMR.MVC/Views/OralHealthClient/FifteenToNineteen.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/FifteenToNineteen.cshtml
@@ -6,9 +6,9 @@
 
 <h1>Masterlist of Oral Health Care Clients - 15 to 19 years old</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
+
+
 <table class="table">
     <thead>
         <tr>
