--- a/AUF.EMR.MVC/Views/OralHealthClient/PregnantTwentyToFourtynine.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/PregnantTwentyToFourtynine.cshtml
@@ -6,9 +6,8 @@
 
 <h1>Masterlist of Oral Health Care Clients - Pregnant 20 to 49 years old</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
+
 <table class="table">
     <thead>
         <tr>
