--- a/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
@@ -6,6 +6,8 @@
 
 <h1>List Under-five Children</h1>
 
+@Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
+
 <table class="table">
     <thead>
         <tr>
